# VRMusic-Studio

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  ExportOptions.plist  LICENSE  PrivacyPolicy.md  README.md  TermsOfService.md  vcpkg.json
StompCoin/: LICENSE  (+10 more)
src/: CMakeLists.txt  main.cpp  main_win.cpp
src/3d/: 3DEngine.cpp
src/action/: ActionEngine.cpp
src/ai/: AIAssistant.cpp  AIBot.cpp  AIEngine.cpp  AIIntegration.cpp  AIIntegration.hpp  AIMasteringEngine.cpp  AIMixingEngine.cpp  AIMixingEngine.hpp  AIModelTrainer.cpp  CMakeLists.txt  HolographicAI.cpp  HolographicAI.hpp  VoiceAI.cpp
src/analysis/: AnalysisEngine.cpp
src/audio/: AudioBuffer.cpp  AudioDevice.cpp  AudioEngine.cpp  AudioEngine.hpp  AudioPlugin.cpp  AudioProcessor.cpp  AudioProcessor.hpp  AudioStream.cpp  AudioTrack.cpp  AudioTrack.hpp  CMakeLists.txt  EffectEngine.cpp  InstrumentEngine.cpp  MIDIEngine.cpp  MasteringEngine.cpp  MidiTrack.cpp  MidiTrack.hpp  MixerEngine.cpp  MixingEngine.cpp  OpenALIntegration.cpp  PresetManager.cpp  ProfessionalMixers.cpp  Samplers.cpp  SpecialEffects.hpp  Synthesizers.cpp  VirtualRooms.cpp  VirtualRooms.hpp  VocoderEngine.cpp  VocoderEngine.hpp
src/automation/: AutomationEngine.cpp  CMakeLists.txt
src/cache/: CacheEngine.cpp
src/clear/: ClearEngine.cpp
src/clock/: ClockEngine.cpp
src/command/: CommandEngine.cpp
src/compatibility/: CMakeLists.txt  ConnectionOptions.cpp  DAWCompatibility.hpp  DJMixCompatibility.cpp
src/configuration/: ConfigurationEngine.cpp
src/core/: Application.cpp  Application.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioPlugin.hpp  BackendService.cpp  BackendService.hpp  CMakeLists.txt  Config.cpp  ConfigManager.cpp  ConfigManager.hpp  ErrorHandler.cpp  ErrorHandler.hpp  EventSystem.cpp  EventSystem.hpp  HybridMode.cpp  Logger.cpp  Logger.hpp  LoggingEngine.cpp  PerformanceMonitor.cpp  PerformanceMonitor.hpp  PluginManager.cpp  PluginManager.hpp  ProjectManager.cpp  ProjectManager.hpp  ResourceManager.cpp  ResourceManager.hpp  UIManager.cpp  UIManager.hpp  VRController.cpp  VRController.hpp  VRManager.cpp  VRManager.hpp  VRMusicStudioApp.cpp  VRMusicStudioApp.hpp  Version.hpp
src/database/: DatabaseEngine.cpp
src/daw/: DAWEngine.cpp
src/debug/: DebugEngine.cpp
src/design/: UIDesigns.cpp
src/desktop/: DesktopSpace.hpp
src/device/: DeviceEngine.cpp
src/effect/: EffectEngine.cpp
src/effects/: CMakeLists.txt  EffectEngine.hpp
src/error/: ErrorEngine.cpp
src/event/: EventEngine.cpp
src/file/: FileEngine.cpp
src/graphics/: GraphicsEngine.cpp
src/gui/: GUIEngine.cpp
src/hardware/: HardwareEngine.cpp
src/history/: HistoryEngine.cpp
src/input/: InputEngine.cpp
src/instrument/: InstrumentEngine.cpp
src/instruments/: DrumMachine.cpp  DrumMachine.hpp  InstrumentModels.cpp  PercussionInstruments.cpp  PercussionInstruments.hpp  RevolutionaryInstruments.cpp  RevolutionaryInstruments.hpp  SpecialInstruments.cpp  StringInstruments.cpp  StringInstruments.hpp  VRInstruments.cpp  VRInstruments.hpp  WorldInstruments.hpp
src/integration/: CMakeLists.txt  VRAudioIntegration.cpp  VRAudioIntegration.hpp
src/ki/: CMakeLists.txt  KIEngine.cpp
src/layout/: LayoutManager.cpp  LayoutManager.hpp
src/main/: MainEngine.cpp
src/master/: MasterEngine.cpp
src/mastering/: CMakeLists.txt  MasteringEngine.hpp
src/memory/: MemoryEngine.cpp
src/midi/: CMakeLists.txt  MIDIController.cpp  MIDIEngine.cpp
src/mixing/: CMakeLists.txt  MixingEngine.cpp
src/monitoring/: MonitoringEngine.cpp
src/network/: CMakeLists.txt  NetworkEngine.cpp  NetworkEngine.hpp
src/optimization/: OptimizationEngine.cpp
src/output/: OutputEngine.cpp
src/performance/: PerformanceEngine.cpp
src/physics/: PhysicsEngine.cpp
src/plugin/: PluginEngine.cpp
src/plugins/: CMakeLists.txt  MelodyToVocals.cpp  PluginEngine.cpp  PluginInterface.hpp  PluginLoader.cpp  PluginManager.cpp  PluginManager.hpp
src/process/: ProcessEngine.cpp
src/profiling/: ProfilingEngine.cpp
src/project/: ProjectEngine.cpp
src/redo/: RedoEngine.cpp
src/reporting/: ReportingEngine.cpp
src/security/: SecurityEngine.cpp
src/sequencer/: Sequencer.cpp  SequencerAudioIntegration.cpp  SequencerDrumIntegration.cpp  SequencerEffectIntegration.cpp  SequencerEngine.cpp  SequencerKIIntegration.cpp  SequencerMasteringIntegration.cpp  SequencerMixingIntegration.cpp  SequencerMixingIntegration.hpp  SequencerPluginIntegration.cpp  SequencerPluginIntegration.hpp  SequencerSamplerIntegration.cpp  SequencerSamplerIntegration.hpp  SequencerSynthIntegration.cpp  SequencerSynthIntegration.hpp  SequencerVRIntegration.cpp
src/settings/: SettingsEngine.cpp
src/state/: StateEngine.cpp
src/statistics/: StatisticsEngine.cpp
src/storage/: StorageEngine.cpp
src/synth/: SynthEngine.cpp
src/system/: SystemEngine.cpp
src/test/: TestEngine.cpp
src/thread/: ThreadEngine.cpp
src/transport/: TransportEngine.cpp
src/ui/: AudioControlPanel.cpp  CMakeLists.txt  DesktopSpace.cpp  RoomManager.cpp  StudioLayout.cpp  StudioLayout.hpp  UI.cpp  UI.hpp  UIComponentBase.cpp  UIComponents.cpp  UIComponents.hpp  UIEngine.cpp  UIManager.cpp  VRUI.cpp  VRUI.hpp  VRUIComponent.cpp  VRUIComponents.hpp  VisualizationManager.cpp
src/undo/: UndoEngine.cpp
src/utils/: CMakeLists.txt
src/video/: VideoEngine.cpp
src/visualization/: VisualizationEngine.cpp
src/vr/: CMakeLists.txt  HologramEngine.cpp  HologramEngine.hpp  HologramRenderer.cpp  HologramRenderer.hpp  VRAudio.cpp  VRAudio.hpp  VRController.cpp  VRController.hpp  VRDisplay.cpp  VRDisplay.hpp  VREngine.cpp  VREngine.hpp  VRIntegration.cpp  VRInteraction.cpp  VRInteraction.hpp  VRKIIntegration.cpp  VRKIIntegration.hpp  VRManager.cpp  VRManager.hpp  VRMasteringInterface.cpp  VRMasteringInterface.hpp  VRMixingInterface.cpp  VRNetwork.cpp  VRPhysics.cpp  VRRenderer.cpp  VRRooms.cpp  VRSequencerInterface.cpp  VRUI.cpp  VRUI.hpp  VRUITextRenderer.cpp
src/vrui/: VRUI.hpp
tests/: CMakeLists.txt  VRAudioIntegrationTest.hpp
tests/integration/: CMakeLists.txt
tests/ui/: VRUITest.cpp
(+606 files in other folders)
